# LoxInterp

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  your_program.sh
.codecrafters/: run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
src/: main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
src/ast/: ast.hpp
src/evaluator/: evaluator.cpp  evaluator.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp
src/parser/: parser.cpp  parser.hpp
src/resolver/: resolver.cpp  resolver.hpp
src/scanner/: scanner.cpp  scanner.hpp
src/util/: format.hpp
tests/: CMakeLists.txt  test_evaluator.cpp  test_interpreter.cpp  test_main.cpp  test_parser.cpp  test_scanner.cpp
